- 0003689: [bugtracker] index.php is sending wrong HTTP header if not logged in (jlatour)
- 0003942: [bugtracker] print_options_page doesn't show real data about selected fields (jlatour)
- 0004193: [bugtracker] Broaden the ldap features to work with Active Directory (alf)
- 0004133: [filters] "Summary stats are links to filters for view_all_bugs" feature is broken (jlatour)
- 0004268: [security] cross site scripting issue (jlatour)
- 0004267: [security] cross site scripting issue (jlatour)
- 0004266: [feature] Update project documentation file (Bastian Pfenningschmidt)
- 0004062: [security] Multiple Cross Site Scripting Vulnerabilities (vboctor)
- 0003371: [feature] CVS Integration - general source control integration implemented (vboctor)
- 0004137: [feature] Support a simple "view" URL (vboctor)
- 0004145: [feature] Mantis pages should have descriptive titles (vboctor)
- 0004185: [customization] Support custom menu options (vboctor)
- 0003766: [email] status notifications are confused and confusing (thraxisp)
- 0003975: [email] Realname vs username in email history (thraxisp)
- 0004147: [email] Receiving emails in foreign languages (thraxisp)
- 0004372: [email] Wrong Reciepients-List in "send a reminder" (thraxisp)
- 0003880: [filters] Ordering doesnt take last_updated into account (narcissus)
- 0003928: [filters] 'Copy Issue' was not copying attachments (narcissus)
- 0003945: [filters] Give the ability to "Update Fixed in Version" in view_all_bug_page.php (narcissus)
- 0004073: [filters] Edit filter page now too wide. 'Apply filter' button is drawn off screen (narcissus)
- 0004093: [filters] Custom field values are a larger type size in view_all_bug_page (narcissus)
- 0004108: [filters] "Use Date Filters" in advanced filters (narcissus)
- 0004121: [filters] Filters saved while "All Projects" is the active project (narcissus)
- 0004125: [filters] In the advanced page, "any" should be selected by default for all search criteria (narcissus)